# neurovlm

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  pyproject.toml  requirements_classification.txt  todo.md
.github/workflows/: docs.yml  publish.yml  tests-with-models.yml  tests.yml
atlas_free_multipositive/: README.md  __init__.py
atlas_free_multipositive/configs/: autoencoder_sparse_config.yaml  dataset_config.yaml  generation_eval_config.yaml  joint_generation_contrastive_config.yaml  paths.yaml  source_weights.yaml  text_to_brain_config.yaml  training_config.yaml
atlas_free_multipositive/data_building/: build_unified_dataset.py  definitions.py  ingest_neurovault.py  ingest_nilearn_atlases.py  qc_dataset.py  rewrite_jsonl_paths.py  text_registry.py
atlas_free_multipositive/evaluation/: __init__.py  evaluate_atlas_retrieval.py  evaluate_generation.py  evaluate_mesh_ranking.py  evaluate_network_retrieval.py  evaluate_peak_metrics.py  evaluate_pubmed_retrieval_diagnostic.py  generation_metrics.py
atlas_free_multipositive/notebooks/: 00_explore_existing_project_data.ipynb  01_ingest_nilearn_atlases.ipynb  02_inspect_pubmed_ale_and_mesh_data.ipynb  03_build_unified_jsonl_dataset.ipynb  04_qc_brain_maps_and_text_positives.ipynb  05_precompute_text_embeddings.ipynb  06_07_colab_train_and_evaluate.ipynb  06_colab_multipositive_retrieval_training.ipynb  06_train_multipositive_contrastive_model.ipynb  07_evaluate_mesh_and_atlas_retrieval.ipynb  08_error_analysis_and_examples.ipynb  09_10_colab_generation_pipeline.ipynb  11_evaluate_text_to_brain_generation.ipynb  12_generation_baseline_comparison.ipynb  13_colab_joint_generation_contrastive.ipynb
atlas_free_multipositive/tests/: test_build_unified_dataset.py  test_collator.py  test_dataset_schema.py  test_generation_baselines.py  test_generation_losses.py  test_multipositive_loss.py  test_neurovault_ingestion.py  (+4 more)
docs/: 00_introduction.ipynb  01_coordinate.ipynb  01_training.ipynb  02_autoencoder.ipynb  03_textencoder.ipynb  04_projection_head.ipynb  04_projection_head_contrastive.ipynb  05_autoencoder_evaluation.ipynb  05_projection_head_contrastive.ipynb  06_evaluation_recall.ipynb  06_neurovault.ipynb  07_decoding.ipynb  07_evaluation_decoding.ipynb  08_difumo_comparison.ipynb  09_network_labelling.ipynb  09_network_labelling_contrastive.ipynb  10_llm_summary.ipynb  10_neurowiki_latent.ipynb  11_llm_summary.ipynb  11_nextwork_brain2text.ipynb  12_nextwork_brain2text.ipynb  13_cogatlas.ipynb  15_generating_interpretations.ipynb  README.md  Untitled-1.ipynb  api.rst  biorxiv.ipynb  brain_to_text2.ipynb  classification_model.ipynb  conf.py  coordinate_tables.ipynb  extract_categories_from_papers.ipynb  extracted_neuroimaging_data.csv  index.md  installation.md  llm_summary.ipynb  llm_summary.py  model_assessment.ipynb  smollm3-3b.ipynb  trial for condesed code for all biorxiv paper types.ipynb  (+1 more)
experiments/: ale_3dcnn_autoencoder_pretrain_colab.ipynb  ale_3dcnn_best_global_context_colab.ipynb  ale_3dcnn_colab.ipynb  ale_3dcnn_decoder_text_to_brain_colab.ipynb  ale_3dcnn_frozen_text_variant_colab.ipynb  compare_ale_models.ipynb  coord_gnn_colab.ipynb  create_network_term_definition_corpus.ipynb  difumo_compare_colab.ipynb  difumo_gat_colab.ipynb  difumo_mlp_colab.ipynb  evaluate_neurovlm_pubmed_recall.ipynb  kg_unification.ipynb  llm_relation_extraction.ipynb  mesh_kg.ipynb  mesh_kg_cooccurrence.ipynb  mesh_qualifier_re.ipynb  nlp_graph.ipynb  rgcn_kg.ipynb  rgcn_kg_colab.ipynb  rgcn_pipeline.md  semantic_model_eval.py  train_ale_cnn.py  train_ale_cnn_autoencoder.py  train_coord_gnn.py  train_difumo_gat_colab.py  unified_kg_pipeline.md
scripts/: prepare_neuro_summaries.py
src/: main.rs
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_ale_cnn.py  test_core.py  test_data.py  test_io.py  test_loss.py  test_metrics.py  test_models.py
(+240 files in other folders)
