[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurovlm"
version = "0.0.1"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "scikit-image",
  "torch",
  "sentence-transformers",
  "adapters",
  "peft",
  "nibabel",
  "nilearn",
  "nimare",
  "tqdm",
  "matplotlib",
  "pyarrow",
  "tqdm"
]
authors = [
  { name="Ryan Hammonds", email="ryanphammonds@gmail.com" },
]
description = "Neuro vision-language models."
readme = "README.md"
requires-python = ">=3.8, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[tool.hatch.build.targets.wheel]
only-include = ["src/neurovlm/**/*.py"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/neurovlm/**/*.py",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
