[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurovlm"
version = "0.0.1"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "nibabel",
  "nilearn",
  "huggingface-hub",
  "safetensors",
  "adapters",
  "transformers",
  "pyarrow"
]
authors = [
  { name="Ryan Hammonds", email="ryanphammonds@gmail.com" },
]
description = "Neuro vision-language models."
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.optional-dependencies]
metrics = [
  "scikit-learn",
  "scikit-image",
]
coords = [
  "nimare",
]
crawling = [
  "requests",
  "beautifulsoup4",
  "tqdm",
]
cogatlas = [
  "networkx",
]
viz = [
  "matplotlib",
  "seaborn",
]
notebook = [
  "ipython",
  "tqdm",
]
llm = [
  "ollama",
]
full = [
  "scikit-learn",
  "scikit-image",
  "nimare",
  "requests",
  "beautifulsoup4",
  "tqdm",
  "networkx",
  "matplotlib",
  "seaborn",
  "ipython",
  "ollama",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/neurovlm/**/*.py"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/neurovlm/**/*.py",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
